Landing page, flex and grid exercises

--- a/Week_1/Day_1/landingpage.html
+++ b/Week_1/Day_1/landingpage.html
@@ -3,27 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Landing page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="landingpage.css">
   </head>
   <body>
     <div class="container">
       <div class="top-bar">
-
+        <h5>Start Bootstrap</h5>
+        <input id="signin" type="submit" value="Sign In">
       </div>
       <div class="middle-section">
-
+        <img id="sea" src="sea.jpeg" alt="Sea">
+        <div class="middle">
+          <h2>Build a landing page for your business <br> or project and generate more leads!</h2>
+          <input type="text" placeholder="Enter your email..." name="signup" id="signup">
+          <input type="submit" name="signupbutton" id="signupbutton" value="Sign up!">
+        </div>
       </div>
       <div class="features">
-        <div class="">
-
+        <div>
+          <i class="fas fa-display fa-5x"></i>
+          <h4>Fully Responsive</h4>
+          <p>This theme will look great on any <br> device, no matter the size!</p>
         </div>
-        <div class="">
-
+        <div>
+          <i class="fa-solid fa-layer-group"></i>
+          <h4>Bootstrap 4 Ready</h4>
+          <p>Featuring the latest build of the new <br> Bootstrap 4 framework</p>
         </div>
-        <div class="">
-
+        <div>
+          <i class="fa-solid fa-circle-check"></i>
+          <h4>Easy to Use</h4>
+          <p>Ready to use with your own content, <br> or customize the source files!</p>
         </div>
       </div>
     </div>
   </body>
-</html>
+  </html>
+
