--- a/Week_1/Day_1/landingpage.html
+++ b/Week_1/Day_1/landingpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Landing page</title>
-    <link rel="stylesheet" href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="landingpage.css">
   </head>
   <body>
@@ -22,7 +22,7 @@
       </div>
       <div class="features">
         <div>
-          <i class="fas fa-display fa-5x"></i>
+          <i class="fa-solid fa-display"></i>
           <h4>Fully Responsive</h4>
           <p>This theme will look great on any <br> device, no matter the size!</p>
         </div>
