--- a/Week_1/Day_1/landingpage.html
+++ b/Week_1/Day_1/landingpage.html
@@ -22,17 +22,17 @@
       </div>
       <div class="features">
         <div>
-          <i class="fa-solid fa-display"></i>
+          <i class="fas fa-desktop fa-5x"></i>
           <h4>Fully Responsive</h4>
           <p>This theme will look great on any <br> device, no matter the size!</p>
         </div>
         <div>
-          <i class="fa-solid fa-layer-group"></i>
+          <i class="fas fa-layer-group fa-5x"></i>
           <h4>Bootstrap 4 Ready</h4>
           <p>Featuring the latest build of the new <br> Bootstrap 4 framework</p>
         </div>
         <div>
-          <i class="fa-solid fa-circle-check"></i>
+          <i class="fas fa-check fa-5x"></i>
           <h4>Easy to Use</h4>
           <p>Ready to use with your own content, <br> or customize the source files!</p>
         </div>
