Shopping website homepage

--- a/Week_1/Day_2/index.html
+++ b/Week_1/Day_2/index.html
@@ -5,15 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="Adidas_Logo.svg">
     <title>Adidas: Homepage</title>
 </head>
 <body>
-    <nav>
+    <div class="top-bar">
+        <p class="toptxt">25% off almost everything</p>
+        <p class="toptxt">Free standard shipping & returns | Join now</p>
+        <p class="toptxt">Explore adiclub</p>
+    </div>
+    <div class="navigation">
+        <a  href="index.html"><img class="logo" src="Adidas_Logo.svg" alt="Adidas logo"></a>
         <ul>
             <li><a href="signup.html">Sign-up</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="products.html">Products</a></li>
         </ul>
-    </nav>
+        <hr>
+    </div>
+    <div class="main-box">
+            <p><a class="shopnow" href="products.html">Shop now</a></p>
+            <p><a class="signupnow" href="signup.html">Sign up now</a></p>
+    </div>
+    
 </body>
 </html>
