--- a/Week_1/Day_2/index.html
+++ b/Week_1/Day_2/index.html
@@ -23,10 +23,10 @@
         </ul>
         <hr>
     </div>
-    <div class="main-box">
-            <p><a class="shopnow" href="products.html">Shop now</a></p>
-            <p><a class="signupnow" href="signup.html">Sign up now</a></p>
+    <div>
+    <a href="products.html"><img class="images" src="shoes1.jpeg" alt="Adidas shoes"></a>
+    <a href="products.html"><img class="images" src="tshirt1.jpeg" alt="Adidas tshirt"></a>
+    <a href="products.html"><img class="images" src="leggings.jpeg" alt="Adidas leggins"></a>
     </div>
-    
 </body>
 </html>
