--- a/Week_1/Day_2/products.html
+++ b/Week_1/Day_2/products.html
@@ -22,6 +22,7 @@
             <li><a href="products.html">Products</a></li>
         </ul>
         <hr>
+    <h1>Products</h1>
     </div>
     <div class="main-container">
         <div>
