font-family: sans-serif

--- a/Week_1/Day_2/login2.html
+++ b/Week_1/Day_2/login2.html
@@ -9,8 +9,18 @@
 </head>
 <body>
     <div class="container">
-        <div class="left-col"></div>
-        <div class="right-col"></div>
+        <div class="left-col">
+            <h1>Log In</h1>
+            <input type="email" name="email" id="email" placeholder="email">
+            <br><br>
+            <input type="password" name="password" id="pwd" placeholder="password"> 
+            <br><br>
+            <div class="rememberme"><input type="checkbox" name="checkbox" id="chkbx">Remember me</div>
+            <div class="f-pwd">Forgot password?</div>
+        </div>
+        <div class="right-col">
+
+        </div>
     </div>
 </body>
 </html>
