--- a/Week_1/Day_2/login2.html
+++ b/Week_1/Day_2/login2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="login2.css">
     <title>Document</title>
 </head>
@@ -17,10 +18,30 @@
             <br><br>
             <div class="rememberme"><input type="checkbox" name="checkbox" id="chkbx">Remember me</div>
             <div class="f-pwd">Forgot password?</div>
-        </div>
-        <div class="right-col">
+            <br><br>
+            <input type="submit" name="login" id="login" value="Log In">
+            <br>
+            <hr id="hrule">
+            <p id="connectwith">or Connect with</p>
+            <div class="icons-left">
+                <i class="fab fa-facebook fa-2x"></i>
+                <i class="fab fa-twitter fa-2x"></i>
+                <i class="fab fa-github fa-2x"></i>
+                <i class="fab fa-linkedin-in fa-2x"></i>
+            </div>
+            <div>
+                <p id="copy">&copy 2020</p>
+            </div>
 
         </div>
+        <div class="right-col">
+            <i class="fas fa-user-plus fa-5x"></i>
+            <div class="right-content"> 
+                <h1 id="hello-f">Hello, friend!</h1>
+                <p>Enter your personal details and start journey with us</p>
+                <input type="submit" name="register" id="register" value="Register">
+                <i class="fas fa-arrow-right"></i>
+            </div>
     </div>
 </body>
 </html>
