--- a/Week_3_DOM/Day_2/ExercisesXP_Ex5.html
+++ b/Week_3_DOM/Day_2/ExercisesXP_Ex5.html
@@ -7,7 +7,7 @@
     <title>Exercise 5</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores asperiores vel 
+    <p id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores asperiores vel 
         numquam repudiandae enim reiciendis, distinctio, sequi temporibus earum accusantium
         quibusdam maxime qui quis adipisci dolor cupiditate magni quasi amet.</p>
     <script src="ExercisesXP_Ex5.js"></script>
