20 April 22:11 Exercises XP complete!

--- a/Week_5_HTTP, JSON, AJAX/Day_1/ExercisesXP_Ex1.html
+++ b/Week_5_HTTP, JSON, AJAX/Day_1/ExercisesXP_Ex1.html
@@ -1,3 +1,5 @@
+<!-- 1. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +9,7 @@
     <title>Exercise 1</title>
 </head>
 <body>
-    <form id="contact_form" method="GET" action="ExercisesXP_Ex1.html">
+    <form name="newForm" id="contact_form" method="GET" action="ExercisesXP_Ex1.html">
         <label for="name">Name</label>
         <br>
         <input type="text" name="name" placeholder="Please enter your name here">
@@ -17,8 +19,8 @@
         <textarea form="contact_form" name="message" id="" cols="26" rows="10" placeholder="Please enter your message here"></textarea>
         <br>
         <input type="submit" value="Send">
-        <script src="ExercisesXP_Ex1.js"></script>
     </form>
-    
+    <script src="ExercisesXP_Ex1.js"></script>
 </body>
 </html>
+
