--- a/Week_5_HTTP, JSON, AJAX/Day_1/ExercisesXP_Ex2.html
+++ b/Week_5_HTTP, JSON, AJAX/Day_1/ExercisesXP_Ex2.html
@@ -7,7 +7,7 @@
     <title>Exercise 1</title>
 </head>
 <body>
-    <form id="contact_form" method="POST" action="ExercisesXP_Ex2.html">
+    <form name="newForm" id="contact_form" method="POST" action="ExercisesXP_Ex2.html">
         <label for="name">Name</label>
         <br>
         <input type="text" name="name" placeholder="Please enter your name here">
