--- a/Week_5_HTTP, JSON, AJAX/Day_2/DailyChallenge.html
+++ b/Week_5_HTTP, JSON, AJAX/Day_2/DailyChallenge.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Challenge</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            gap: 40px;
-            justify-content: space-around;
-        }
-    </style>
+    <title>Daily Challenge</title>    
 </head>
 <body>
+    <form name="gifForm">
+        <input type="text" name="search" placeholder="Search">
+        <input type="submit"  name="submit" id="searchButton" value="Search">
+        <button type="button" id="deleteAll">Delete All</button>
+    </form>
+    <div id="gifs">
+
+    </div>
     <script src="DailyChallenge.js"></script>
 </body>
 </html>
