--- a/Week_7_NodeJS/Day_2/DailyChallenge/public/pic.html
+++ b/Week_7_NodeJS/Day_2/DailyChallenge/public/pic.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Challenge</title>
+    <title>Picture</title>
 </head>
 <body>
-    
+    <img src="potato.jpeg" alt="A potato">
     <script src="script.js"></script>
 </body>
 </html>
