--- a/Week_2_JS/Day_5/calculator/index.html
+++ b/Week_2_JS/Day_5/calculator/index.html
@@ -16,29 +16,35 @@
   </head>
   <body>
     <div class="calculator">
-        <div class="numRowOne">
-            <div class="button"><button type="button" name="button" onclick="number(0);">0</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(1);">1</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(2);">2</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(3);">3</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(4);">4</button></div>
+        <div class="row">
+            <input type="text" name="display" id="display">
         </div>
-        <div class="numRowTwo">
-            <div class="button"><button type="button" name="button" onclick="number(5);">5</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(6);">6</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(7);">7</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(8);">8</button></div>
-            <div class="button"><button type="button" name="button" onclick="number(9);">9</button></div>
+        <div class="row">
+            <div><input type="button" class="btn num" name="button" onclick="number(0);" value="0"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(1);" value="1"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(2);" value="2"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(3);" value="3"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(4);" value="4"></div>
         </div>
-        <div class="opRow">
-            <div class="operator"><button type="button" name="button" onclick="operator('+');">+</button></div>
-            <div class="operator"><button type="button" name="button" onclick="operator('-');">-</button></div>
-            <div class="operator"><button type="button" name="button" onclick="operator('*');">*</button></div>
-            <div class="operator"><button type="button" name="button" onclick="operator('/');">/</button></div>
-            <div class="operator"><button type="button" name="button" onclick="equal();">=</button></div>    
+        <div class="row">
+            <div><input type="button" class="btn num" name="button" onclick="number(5);" value="5"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(6);" value="6"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(7);" value="7"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(8);" value="8"></div>
+            <div><input type="button" class="btn num" name="button" onclick="number(9);" value="9"></div>
+        </div>
+        <div class="row">
+            <div><input type="button" class="btn op" name="button" onclick="operator('+');" value="+"></div>
+            <div><input type="button" class="btn op" name="button" onclick="operator('-');" value="-"></div>
+            <div><input type="button" class="btn op" name="button" onclick="operator('*');" value="*"></div>
+            <div><input type="button" class="btn op" name="button" onclick="operator('/');" value="/"></div>
+            <div><input type="button" class="btn op" name="button" onclick="equal();" value="="></div>    
+        </div>
+        <div class="row">
+            <div><button type="button" class="reset" name="button" onclick="reset();">Reset</button></div>
+            <div><button type="button" class="clear" name="button" onclick="clear();">Clear</button></div>
         </div>
     </div>
-    
     <script src="./script.js" charset="utf-8"></script>
 </body>
 </html>
